[project]
name = "polyclaw-dana"
version = "0.1.0"
description = "Arbitrage trading bot for Polymarket ultra-short crypto markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
